--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -37,6 +37,12 @@
 			<version>2.2.6.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.netflix.ribbon/ribbon-loadbalancer -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
