--- a/hr-api-gateway-zull/src/main/resources/application.properties
+++ b/hr-api-gateway-zull/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.application.name=hr-api-gateway-zull
+server.port=8765
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+zull.routes.worker.service-id=hr-worker
+zull.routes.worker.path=/hr-worker/**
+
+zull.routes.worker.service-id=hr-payroll
+zull.routes.worker.path=/hr-payroll/**
+
+
 
