--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -50,6 +50,16 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>2.2.6.RELEASE</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-config-client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>2.2.6.RELEASE</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
