--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -58,6 +58,13 @@
 			<version>2.2.6.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.3.5.RELEASE</version>
+		</dependency>
+
 
 
 	</dependencies>
