--- a/hr-worker/src/main/resources/bootstrap.properties
+++ b/hr-worker/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 spring.application.name=hr-worker
+#Servidor de configuracao.
 spring.cloud.config.uri=http://localhost:8888
 
 spring.profiles.active=test
