--- a/hr-users/pom.xml
+++ b/hr-users/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>2.2.6.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
+			<version>2.2.7.BUILD-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 
