UserRepository, UserResource, zull config.

--- a/hr-api-gateway-zull/src/main/resources/application.properties
+++ b/hr-api-gateway-zull/src/main/resources/application.properties
@@ -13,5 +13,6 @@ zull.routes.worker.path=/hr-worker/**
 zull.routes.worker.service-id=hr-payroll
 zull.routes.worker.path=/hr-payroll/**
 
-
+zull.routes.worker.service-id=hr-user
+zull.routes.worker.path=/hr-user/**
 
