UserFeignClient ms hr-oauth

--- a/hr-api-gateway-zull/src/main/resources/application.properties
+++ b/hr-api-gateway-zull/src/main/resources/application.properties
@@ -10,9 +10,12 @@ ribbon.ReadTimeout=20000
 zull.routes.worker.service-id=hr-worker
 zull.routes.worker.path=/hr-worker/**
 
-zull.routes.worker.service-id=hr-payroll
-zull.routes.worker.path=/hr-payroll/**
+zull.routes.payroll.service-id=hr-payroll
+zull.routes.payroll.path=/hr-payroll/**
 
-zull.routes.worker.service-id=hr-user
-zull.routes.worker.path=/hr-user/**
+zull.routes.user.service-id=hr-user
+zull.routes.user.path=/hr-user/**
+
+zull.routes.oauth.service-id=hr-oauth
+zull.routes.oauth.path=/hr-oauth/**
 
