Implementando OAuth2 hr-oauth.

--- a/hr-api-gateway-zull/src/main/resources/application.properties
+++ b/hr-api-gateway-zull/src/main/resources/application.properties
@@ -18,4 +18,5 @@ zull.routes.user.path=/hr-user/**
 
 zull.routes.oauth.service-id=hr-oauth
 zull.routes.oauth.path=/hr-oauth/**
+zull.routes.oauth.sensitive-headers=Cookies,Set-Cookie
 
