--- a/hr-oauth/pom.xml
+++ b/hr-oauth/pom.xml
@@ -35,6 +35,13 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>2.2.6.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-oauth2 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
+			<version>2.2.4.RELEASE</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
